-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0 Beta3
-
-
6c30a60a4 (dev), 1f0cf1e6e (6.8), 505ee95fd (6.8.0)
Assert in .cpp side after calls through Java side API's. Java side should be properly synchronized between Qt and Android thread. See QTBUG-127467
- relates to
-
QTBUG-125606
New Java Example (QtAbstractItemModel)
-
- Closed
-
- split from
-
QTBUG-127467 QtAbstractItemModel asserts when being rapidly modified
-
- Closed
-